--- a/app_parent/src/main/res/layout/activity_pet_all.xml
+++ b/app_parent/src/main/res/layout/activity_pet_all.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     tools:context="com.bj.hmxxparents.pet.view.PetALLActivity"
+    android:background="@mipmap/bg_pet_all"
     android:id="@+id/layout_root">
 
     <RelativeLayout
